fix section spacing

--- a/src/containers/discover/collections.module.scss
+++ b/src/containers/discover/collections.module.scss
@@ -1,5 +1,5 @@
 @import '../../styles/common';
 
 .featured {
-	margin-bottom: 48px;
+	margin-bottom: 32px;
 }
